rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_curly_bracket-2.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_curly_bracket), \"foreach a(x) { a = 2;\")"
snapshot_kind: text
---
error: Unclosed token: '{'
  ┌─ missing_right_curly_bracket:1:1
  │
1 │ foreach a(x) { a = 2;
  │ ^ Unclosed token: '{'
